--- a/popup/todo.html
+++ b/popup/todo.html
@@ -12,13 +12,15 @@
         <h2>To Do</h2>
         <input type="text" id="myInput" placeholder="New Task...">
         <span id="addButton" class="addBtn">Add</span>
-        <!-- <button onclick="timerShow()" class="addBtn">Timer</button> -->
     </div>
 
     <ul id="myUL">
     </ul>
-    <span id = "timer"></span> <button id = "start">Start</button>
-   
+    <span id = "timer"></span> 
+    <button id = "start" class="addBtn" style = "margin-bottom: 10px;">
+        <img id="playButton" src="https://res.cloudinary.com/https-tinloof-com/image/upload/v1593360448/blog/time-in-js/play-button_opkxmt.svg" />
+        <img id="resetButton" src="https://res.cloudinary.com/https-tinloof-com/image/upload/v1593360448/blog/time-in-js/reset-button_mdv6wf.svg" />
+    </button>
 </body>
 
 </html>
